20210116 - Finished site basic layout

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
 <mat-toolbar>
+    <button mat-icon-button>
+        <mat-icon (click)="clickedMenu()">menu</mat-icon>
+    </button>
     <span>Weather</span>
 </mat-toolbar>
