--- a/src/app/weather/settings/settings.component.html
+++ b/src/app/weather/settings/settings.component.html
@@ -1,1 +1,8 @@
-<p>settings works!</p>
+<div>
+<mat-selection-list #shoes>
+    <mat-list-option>Abc</mat-list-option>
+    <mat-list-option>Cde</mat-list-option>
+    <mat-list-option>Efg</mat-list-option>
+    <mat-list-option>hij</mat-list-option>
+</mat-selection-list>
+</div>
