--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
-<app-navbar></app-navbar>
+<app-header (menuClicked)="toggleNavBar()"></app-header>
+<app-body [navbarOpened]="navbarOpened"></app-body>
