20210116 - Made some modifications to layout

--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,2 +1,1 @@
-<app-header (menuClicked)="toggleNavBar()"></app-header>
-<app-body [navbarOpened]="navbarOpened"></app-body>
+<app-body></app-body>
