--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="example-container" >
+<mat-sidenav-container class="example-container" fullscreen>
     <mat-sidenav #sidenav mode="side" [(opened)]="navbarOpened">
       <mat-nav-list>
         <a mat-list-item [routerLink]="''">Dashboard</a>
@@ -7,7 +7,8 @@
     </mat-sidenav>
   
 
-    <mat-sidenav-content>
+    <mat-sidenav-content >
+      <app-header (menuClicked)="toggleNavBar()"></app-header>
       <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
