--- a/src/app/weather/home/home.component.html
+++ b/src/app/weather/home/home.component.html
@@ -1,4 +1,32 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <!-- <div class="col-sm"></div> -->
+        <div class="col-sm"><app-searchbar query=''></app-searchbar></div>
+        <!-- <div class="col-sm"></div> -->
+    </div>
+    <div class="row">
+        <div class="col-sm">
+
+        </div>
+
+        <div class="col-sm">
+            <app-selection-table></app-selection-table>
+        </div>
+        <div class="col-sm" >
+            <app-card></app-card>
+        </div>
+    </div>
+</div>
+<hr class="my-3"/>
+
+<div class="container">
+    <div class="row">Predictions</div>
+    <div class="row">
+        <div class="col-sm"><app-card></app-card></div>
+        <div class="col-sm"><app-card></app-card></div>
+        <div class="col-sm"><app-card></app-card></div>
+        <div class="col-sm"><app-card></app-card></div>
+        <div class="col-sm"><app-card></app-card></div>
+    </div>
+
+</div>
